appnews/src/main/java/com/example/appnews/web/errors/ErrorCreateComment.java
package com.example.appnews.web.errors;

public class ErrorCreateComment {
}
